--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_th.properties
@@ -1,6 +1,8 @@
 all-fields-marked-with-x-are-required=All fields marked with {0} are required. (Automatic Copy)
 autocomplete=ทำให้สมบูรณ์อัตโนมัติ (Automatic Translation)
 choose-a-data-provider=เลือกผู้ให้บริการข้อมูล (Automatic Translation)
+choose-an-output-parameter=เลือกพารามิเตอร์การแสดงผล (Automatic Translation)
+choose-an-output-parameter-for-a-data-provider-previously-created=เลือกพารามิเตอร์การแสดงผลสำหรับตัวให้บริการข้อมูลที่สร้างไว้ก่อนหน้านี้ (Automatic Translation)
 enter-placeholder-text=ใส่ข้อความตัวยึด (Automatic Translation)
 enter-text-that-assists-the-user-but-is-not-submitted-as-a-field-value=ป้อนข้อความที่ช่วยให้ผู้ใช้ แต่ไม่ส่งเป็นค่าของเขตข้อมูล (Automatic Translation)
 field=ฟิลด์ (Automatic Translation)
