--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1,6 +1,8 @@
 all-fields-marked-with-x-are-required=标记 {0}的所有字段是必填项。
 autocomplete=自动完成 (Automatic Translation)
 choose-a-data-provider=选择一个数据提供程序 (Automatic Translation)
+choose-an-output-parameter=选择一个输出参数。 (Automatic Translation)
+choose-an-output-parameter-for-a-data-provider-previously-created=选择以前创建的数据提供程序的输出参数。 (Automatic Translation)
 enter-placeholder-text=输入占位符文本。 (Automatic Translation)
 enter-text-that-assists-the-user-but-is-not-submitted-as-a-field-value=作为字段值输入文本并协助用户，但不是会提交。 (Automatic Translation)
 field=字段 (Automatic Translation)
